# Everyric2

./: .env.example  .gitignore  AGENTS.md  NVFP4_ISSUE_REPORT.md  README.md  everyric2.db  latest.json  pyproject.toml
.github/scripts/: update-latest.mjs
.github/workflows/: release.yml
.mantic/sessions/: session-1769063775992-s56sej.json
.specify/memory/: constitution.md
deploy/: .env.example  DEPLOY.md  everyric2-user.service  everyric2-worker-user.service  everyric2.service  nginx-everyric.conf
diagrams/: 01_overall_pipeline.mermaid  02_hybrid_engine.mermaid  03_diagnostics_structure.mermaid  04_output_structure.mermaid  05_translation_flow.mermaid  06_mfa_detection.mermaid  07_lyrics_matcher.mermaid  08_class_diagram.mermaid  09_ctc_engine.mermaid  10_segmentation_flow.mermaid  11_reprocess_workflow.mermaid  12_engine_model_map.mermaid
docs/: GPU_ALIGNMENT_ENGINES.md  IMPLEMENTATION_PLAN.md  PRD_AE_PLUGIN.md  PRD_AE_PLUGIN_V2.md  PRD_CHROME_EXTENSION.md  advanced-features-spec.md  typography_auto_generation_planning_request.md  typography_auto_generation_ux_plan.md
docs/releases/: ae-v2.0.0.md  chrome-v1.1.0.md
docs/research/: lyrics-pool-2026-07.md  qwen3-forcedaligner-2026-07.json
everyric2/: __init__.py  batch.py  cli.py  gpu_mem.py  server.py
everyric2-ae/: .debug  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.jsx.json
everyric2-ae/CSXS/: manifest.xml
everyric2-ae/css/: style.css
everyric2-ae/scripts/: build-zxp.mjs  clean.mjs  install.js  install.mjs  run-tests.mjs
everyric2-chrome/: README.md  SERVER_API.md  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
everyric2-chrome/public/: overlay.css
everyric2-chrome/scripts/: countdown-check.mjs  debug-lane-check.mjs  fresh-profile-check.mjs  mock-server.mjs  pip-wide-check.mjs  real-e2e.mjs  search-ui-check.mjs  smoke-test.mjs  space-key-check.mjs
everyric2-chrome/src/: background.ts  content.ts  types.ts
everyric2/alignment/: __init__.py  base.py  ctc_engine.py  factory.py  faster_whisper_engine.py  gpu_hybrid_engine.py  hybrid_engine.py  matcher.py  mfa_engine.py  nemo_engine.py  qwen_engine.py  segmentation.py  silence.py  sofa_engine.py  timing_postprocess.py  whisperx_engine.py
everyric2/audio/: __init__.py  correlate.py  downloader.py  loader.py  separator.py  vad.py
everyric2/config/: __init__.py  paths.py  settings.py
everyric2/debug/: __init__.py  debug_info.py  output_manager.py  visualizer.py
everyric2/inference/: __init__.py  prompt.py  qwen_omni.py  qwen_omni_gguf.py  qwen_omni_vllm.py
everyric2/io/: __init__.py  project.py
everyric2/melody/: __init__.py  extractor.py  rmvpe.py
everyric2/output/: __init__.py  formatters.py  multi_output.py
everyric2/server/: main.py  media_cache.py  vocaro_index.py  worker.py
everyric2/text/: __init__.py  kana_hangul.py  reading.py  tokenizer.py
everyric2/translation/: __init__.py  translator.py
examples/: batch_local_test.yaml  batch_test.yaml  test_lyrics.txt
tests/: conftest.py  test_captions.py  test_clamp_timing.py  test_correlate.py  test_edge_fixes.py  test_f0_curve.py  test_f0_parallel.py  test_faster_whisper_engine.py  test_formatters.py  test_gpu_mem.py  test_kana_hangul.py  test_link_jobs.py  test_maintenance.py  test_matcher.py  test_media_cache_sync.py  test_melody.py  test_melody_key.py  test_mfa_engine.py  test_nvidia_translator.py  test_oov_substitute.py  test_prompt.py  test_pron_alignment.py  test_pron_validation.py  test_reading.py  test_settings.py  test_splice.py  test_star_guard.py  test_sync_link.py  test_vocaro_index.py  test_vocaro_proxy.py  test_warm_models.py  test_whisperx_engine.py  test_worker_pool.py
tests/fixtures/: mms_kor_vocab.json
(+47 files in other folders)
